retrieveUnpackaged/objects/TStudent__c.object
<CustomObject>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <referenceTo>Training__c</referenceTo>
        <relationshipLabel>TStudents</relationshipLabel>
        <relationshipName>TStudents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <label>password</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>TStudent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TStudents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>